--- a/town_hall_1/c3_index.html
+++ b/town_hall_1/c3_index.html
@@ -20,11 +20,11 @@
 		Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.
 		
 		Our Ticket Packages
-		
-		Season Package: $95
-		Patron Package: $200
-		Single Speaker: $25
-		
+	<ul>	
+		<li>Season Package: $95</li>
+		<li>Patron Package: $200</li>
+		<li>Single Speaker: $25</li>
+	</ul>	
 		This season's guest speakers
 		
 		October
