--- a/town_hall_1/c3_index.html
+++ b/town_hall_1/c3_index.html
@@ -9,35 +9,35 @@
 
 <body>
 	<header>
-		San Joaquin Valley Town Hall
-		Celebrating our 75th Year		
+		<h1>San Joaquin Valley Town Hall</h1>
+		<h5>Celebrating our 75th Year</h5>		
 	</header>
 	<main>
-		Our Mission
+		<h1>Our Mission</h1>
 		
-		San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:
+		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:</p>
 		
-		Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.
+		<p><q>Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.</q></p>
 		
-		Our Ticket Packages
+		<h1>Our Ticket Packages</h1>
 	<ul>	
 		<li>Season Package: $95</li>
 		<li>Patron Package: $200</li>
 		<li>Single Speaker: $25</li>
 	</ul>	
-		This season's guest speakers
+		<h1>This season's guest speakers</h1>
 		
-		October
-		David Brancaccio
+		<h6>October</h6>
+		<h6>David Brancaccio</h6>
 		
-		November
-		Andrew Ross Sorkin
+		<h6>November</h6>
+		<h6>Andrew Ross Sorkin</h6>
 		
-		January
-		Amy Chua
+		<h6>January</h6>
+		<h6>Amy Chua</h6>
 	</main>
 	<footer>
-		(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755		
+		<p>(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>		
 	</footer>
 </body>
 </html>
