--- a/town_hall_1/c3_index.html
+++ b/town_hall_1/c3_index.html
@@ -13,13 +13,13 @@
 		<h3>Celebrating our 75th Year</h3>		
 	</header>
 	<main>
-		<h1>Our Mission</h1>
+		<h2>Our Mission</h2>
 		
 		<p>San Joaquin Valley Town Hall is a non-profit organization that is run by an all-volunteer board of directors. Our mission is to bring nationally and internationally renowned, thought-provoking speakers who inform, educate, and entertain our audience! As one or our members told us:</p>
 		
-		<p><q>Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.</q></p>
+		<blockquote></blockquote><p><q>Each year I give a ticket package to each of our family members. I think of it as the gift of knowledge...and that is priceless.</q></p>
 		
-		<h1>Our Ticket Packages</h1>
+		<h2>Our Ticket Packages</h2>
 	<ul>	
 		<li>Season Package: $95</li>
 		<li>Patron Package: $200</li>
@@ -27,14 +27,14 @@
 	</ul>	
 		<h1>This season's guest speakers</h1>
 		
-		<h6>October</h6>
-		<h6>David Brancaccio</h6>
+		<h3>October <br>
+		<a>David Brancaccio</a></h3>
 		
-		<h6>November</h6>
-		<h6>Andrew Ross Sorkin</h6>
+		<h3>November <br>
+		<a>Andrew Ross Sorkin</a></h3>
 		
-		<h6>January</h6>
-		<h6>Amy Chua</h6>
+		<h3>January <br>
+		<a>Amy Chua</a></h3>
 	</main>
 	<footer>
 		<p>(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>		
