--- a/town_hall_1/c3_index.html
+++ b/town_hall_1/c3_index.html
@@ -29,12 +29,16 @@
 		
 		<h3>October <br>
 		<a>David Brancaccio</a></h3>
+		<img src="brancaccio75.jpg" alt="David Branaccio" height="75">
 		
 		<h3>November <br>
 		<a>Andrew Ross Sorkin</a></h3>
+		<img src="sorkins75.jpg" alt="Andrew Ross Sorkins" height="75">
 		
 		<h3>January <br>
 		<a>Amy Chua</a></h3>
+		<img src="chua75.jpg" alt="Amy Chua" height="75">
+		
 	</main>
 	<footer>
 		<p>(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>		
