--- a/town_hall_1/c3_index.html
+++ b/town_hall_1/c3_index.html
@@ -28,15 +28,15 @@
 		<h1>This season's guest speakers</h1>
 		
 		<h3>October <br>
-		<a>David Brancaccio</a></h3>
+		<a href="../speakers/brancaccio.html">David Brancaccio</a></h3>
 		<img src="images/brancaccio75.jpg" alt="David Branaccio" height="75">
 		
 		<h3>November <br>
-		<a>Andrew Ross Sorkin</a></h3>
+		<a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		<img src="images/sorkins75.jpg" alt="Andrew Ross Sorkins" height="75">
 		
 		<h3>January <br>
-		<a>Amy Chua</a></h3>
+		<a href="../speakers/chua.html>Amy Chua</a></h3>
 		<img src="images/chua75.jpg" alt="Amy Chua" height="75">
 		
 	</main>
