--- a/town_hall_1/c3_index.html
+++ b/town_hall_1/c3_index.html
@@ -32,13 +32,12 @@
 		<img src="images/brancaccio75.jpg" alt="David Branaccio" height="75">
 		
 		<h3>November <br>
-		<a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		<img src="images/sorkins75.jpg" alt="Andrew Ross Sorkins" height="75">
+		<h3><a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		
 		<h3>January <br>
+		<img src="image/chua75.jpg" alt="Amy chua" height="75">
 		<a href="../speakers/chua.html>Amy Chua</a></h3>
-		<img src="images/chua75.jpg" alt="Amy Chua" height="75">
-		
 	</main>
 	<footer>
 		<p>(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>		
