--- a/town_hall_1/c3_index.html
+++ b/town_hall_1/c3_index.html
@@ -35,9 +35,10 @@
 		<img src="images/sorkins75.jpg" alt="Andrew Ross Sorkins" height="75">
 		<h3><a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		
-		<h3>January</h3> <br>
+		<h3>January <br></h3>
+		<a href="../speakers/chua.html>Amy Chua>
 		<img src="image/chua75.jpg" alt="Amy chua" height="75">
-		<h3><a href="../speakers/chua.html>Amy Chua> </h3>
+		
 	</main>
 	<footer>
 		<p>(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>		
