--- a/town_hall_1/c3_index.html
+++ b/town_hall_1/c3_index.html
@@ -35,7 +35,7 @@
 		<img src="images/sorkins75.jpg" alt="Andrew Ross Sorkins" height="75">
 		<h3><a href="../speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
 		
-		<h3>January <br></h3>
+		<h3>January</h3>
 		<a href="../speakers/chua.html>Amy Chua>
 		<img src="image/chua75.jpg" alt="Amy chua" height="75">
 		
