--- a/town_hall_1/c3_index.html
+++ b/town_hall_1/c3_index.html
@@ -35,10 +35,9 @@
 		<img src="images/sorkins75.jpg" alt="Andrew Ross Sorkins" height="75">
 		<h3><a href="../speakers/sorkin.html"Andrew Ross Sorkin></h3>
 		
-		<h3>January</h3>
-		<a href="../speakers/chua.html>Amy Chua>
-		<img src="images/chua75.jpg" alt="Amy chua" height="75">
-			<img src="images/chua75.jpg" alt="Amy Chua" height="75"
+		<h3>January
+		<a href="../speakers/chua.html>Amy Chua</a> </h3>
+		<img src="images/chua75.jpg" alt="Amy Chua" height="75"
 		
 	</main>
 	<footer>
