--- a/town_hall_1/c3_index.html
+++ b/town_hall_1/c3_index.html
@@ -25,20 +25,15 @@
 		<li>Patron Package: $200</li>
 		<li>Single Speaker: $25</li>
 	</ul>	
+		
 		<h1>This season's guest speakers</h1>
-		
-		<h3>October <br>
-		<a href="../speakers/brancaccio.html">David Brancaccio</a></h3>
-		<img src="images/brancaccio75.jpg" alt="David Branaccio" height="75">
-		
-		<h3>November</h3> <br>
-		<img src="images/sorkins75.jpg" alt="Andrew Ross Sorkins" height="75">
-		<h3><a href="../speakers/sorkin.html"Andrew Ross Sorkin></h3>
-		
-		<h3>January
-		<a href="../speakers/chua.html>Amy Chua</a> </h3>
-		<img src="images/chua75.jpg" alt="Amy Chua" height="75"
-		
+		<h3>October<br><a href="speakers/brancaccio.html">David Brancaccio</a></h3>
+		<img src="images/brancaccio75.jpg" alt="David Brancaccio photo">
+		<h3>November<br><a href="speakers/sorkin.html">Andrew Ross Sorkin</a></h3>
+		<img src="images/sorkin75.jpg" alt="Andrew Ross Sorkin photo">
+		<h3>January<br><a href="speakers/chua.html">Amy Chua</a></h3>
+		<img src="images/chua75.jpg" alt="Amy Chua photo">
+
 	</main>
 	<footer>
 		<p>(c) 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>		
